// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders 1`] = `
<div>
  <div
    class="my-[6px] mx-0"
  >
    <span
      class="base-Slider block cursor-pointer width-full relative py-[6px] -my"
    >
      <span
        class="base-Slider block absolute w-full h-[1px] opacity-[0.24] rounded-none bg-gray"
      />
      <span
        class="base-Slider block absolute h-[1px] bg-blue"
        style="left: 0%; width: 0%;"
      />
      <span
        class="base-Slider group/thumb flex justify-center items-center w-[15px] h-[15px] rounded-[50%] bg-blue border-[2px] border-solid border-white -mt outline-0 absolute -ml transition-shadow cursor-pointer"
        data-index="0"
        style="left: 0%;"
      >
        <input
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          data-index="0"
          max="100"
          min="0"
          step="1"
          style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
          type="range"
          value="0"
        />
        <span
          class="absolute shadow-4 text-sm text-white bg-graphite m-1 rounded-sm py-[2px] px-2 will-change transition-transform hidden top-[calc(100%+2px)] left-[calc(100%-13px)]"
        >
          0
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Slider with initial value 1`] = `
<div>
  <div
    class="my-[6px] mx-0"
  >
    <span
      class="base-Slider block cursor-pointer width-full relative py-[6px] -my"
    >
      <span
        class="base-Slider block absolute w-full h-[1px] opacity-[0.24] rounded-none bg-gray"
      />
      <span
        class="base-Slider block absolute h-[1px] bg-blue"
        style="left: 0%; width: 4%;"
      />
      <span
        class="base-Slider group/thumb flex justify-center items-center w-[15px] h-[15px] rounded-[50%] bg-blue border-[2px] border-solid border-white -mt outline-0 absolute -ml transition-shadow cursor-pointer"
        data-index="0"
        style="left: 4%;"
      >
        <input
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="4"
          data-index="0"
          max="100"
          min="0"
          step="1"
          style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
          type="range"
          value="4"
        />
        <span
          class="absolute shadow-4 text-sm text-white bg-graphite m-1 rounded-sm py-[2px] px-2 will-change transition-transform hidden top-[calc(100%+2px)] left-[calc(100%-13px)]"
        >
          4
        </span>
      </span>
    </span>
  </div>
</div>
`;
